Fix [MAILWEB-834] composer action button dark mode

--- a/packages/components/components/editor/SquireEditor.scss
+++ b/packages/components/components/editor/SquireEditor.scss
@@ -97,6 +97,6 @@
         }
     }
     .editor-toolbar-icon {
-        color: var(--color-mail-area, $pm-global-grey);
+        color: var(--color-main-area, $pm-global-grey);
     }
 }
